# uni-notes

./: .gitignore  .gitmodules  issue-list.txt
semester-11/: exam-plan.md  hpgp-notes.md  pcpp-notes.md
semester-4/ise/exercises/: Project Journal.odt
semester-5/BDTF/notes/: Assesment Questions.md  Assumption Mapping.md  Backstage Disruption.md  Backstage Driven Shifts.md  Business Model Canvas.md  Business Model Design Performance.md  Business Model Portfolio.md  Business Model.md  Customer Insights.md  Desirability.md  Discovery Experiments.md  Disintermediators.md  Disruption.md  Ecosystem.md  Environment.md  Etnography.md  Evidence.md  Experiment Ethics.md  Experiment Flow.md  Experiment Pitfalls.md  Experiment Selection.md  Experiment Sequences.md  Experiment.md  Exploit.md  Explore.md  Fit.md  Frontstage Disruption.md  Frontstage Driven Shifts.md  Hypothesis.md  Hypothesize.md  Innovation Metrics and Innovation Project Scoreboard.md  Innovation Metrics.md  Innovation Project Score Card.md  Key Forces.md  Learn.md  Learning Card.md  Patterns.md  Plan.md  Portfolio Management.md  Portfolio Map.md  (+14 more)
semester-5/BSEC1/projects/handin-2/: .dockerignore  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  compile-report.sh  docker-compose.yaml
semester-5/BSEC1/projects/handin-2/data/: client.conf  gen_certs.sh  server.conf
semester-5/BSEC1/projects/handin-2/proto/: communication.proto
semester-5/BSEC1/projects/handin-2/src/: client.rs  dice.rs  keys.rs  main.rs  math.rs  messages.rs  pedersen.rs  server.rs
semester-8/: exam-reading.md
(+205 files in other folders)
