[package]
name = "handin-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0.9", features = ["derive"] }
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.8"
