[package]
name = "handin-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8", features = ["tls"]}
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.0.9", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4"
primal = "0.2"

[build-dependencies]
tonic-build = "0.8"
